--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,45 @@
 .flip {
   transform-style: preserve-3d;
 }
+
+@layer components {
+  .custom-bg {
+    background-image: linear-gradient(
+        to right,
+        rgba(0, 0, 0, 0.1),
+        rgba(0, 0, 0, 0.8)
+      ),
+      url("https://images.unsplash.com/photo-1483401757487-2ced3fa77952?q=80&w=1473&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+
+  .custom-bg-start {
+    background-image: linear-gradient(
+        to right,
+        rgba(236, 72, 153, 0.1),
+        rgba(0, 0, 0, 0.8)
+      ),
+      url("https://images.unsplash.com/photo-1483401757487-2ced3fa77952?q=80&w=1473&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+
+  .custom-backdrop {
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+  }
+
+  .custom-shadow {
+    box-shadow: 1px 1px 30px rgba(100, 102, 241, 0.05);
+  }
+
+  .custom-cursor {
+    cursor: url("../src/assets/icons8-3d-cursor.svg"), auto;
+  }
+  .custom-cursor-pointer {
+    cursor: url("../src/assets/icons8-hand-cursor.svg"), auto;
+  }
+}
