--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,8 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    min-height: calc(100% + env(safe-area-inset-top));
+    padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
 
 .flip {
