--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ html {
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
-    min-height: 100vh;
+    min-height: calc(100% + env(safe-area-inset-top));
     padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
 
