--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-    background-color:red;
+.dark {
+    background-color:yellow;
 }
 
 .flip {
