--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,9 @@
 @tailwind utilities;
 
 .dark {
-    background-color: #020617;
+    background: url("https://images.unsplash.com/photo-1483401757487-2ced3fa77952?q=80&w=1473&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D")
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .flip {
@@ -23,7 +25,6 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    padding-top: constant(safe-area-inset-top);
   }
 
   .custom-bg-start {
