--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,7 @@
 @tailwind utilities;
 
 .dark {
-    background: url("https://images.unsplash.com/photo-1483401757487-2ced3fa77952?q=80&w=1473&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: #020617;
 }
 
 .flip {
@@ -15,9 +13,24 @@
 
 
 @layer components {
-  .custom-bg {
+  .custom-bg-mobile {
     background-image: linear-gradient(
         to right,
+        #020617,
+        transparent,
+        transparent,
+        transparent,
+        rgba(0,0,0,0.5)
+      ),
+      url("https://images.unsplash.com/photo-1483401757487-2ced3fa77952?q=80&w=1473&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+  
+  .custom-bg {
+    background-image: linear-gradient(
+        to bottom,
         rgba(0, 0, 0, 0.1),
         rgba(0, 0, 0, 0.8)
       ),
